
                CHANGES in `mboost' VERSION 2.0-4 (2010-04-15, r490)

  o  new vignette "mboost" describing 2.0-x series features

  o  fixed bug in bols(): contrast.arg was ignored if not a named list
     (which is wasn't per default)

  o  added (missing) response functions to families Weibull(),
     Loglog(), Lognormal() and NBinomial()

  o  fixed bug in family CoxPH which occured with NAs

  o  improvements and corrections in documentation


                CHANGES in `mboost' VERSION 2.0-3 (2010-03-10, r456)

  o  glmboost(..., center = TRUE) now also centers columns of the
     design matrix corresponding to contrasts of factors
     when an intercept term is present leading to faster risk
     minimization in these cases.

  o  coef.glmboost: New argument `off2int = TRUE' adds the
     offset to the intercept. In addition, the intercept
     term is now adjusted for centered covariates.

  o  check for infinite residuals in mboost_fit(). Especially
     for family = Poisson(), something like boost_control(nu = 0.01)
     fixes this problem.

  o  "by" (in bols() and bbs()) can now handle factors with more than
     two levels

  o  improved plot.mboost() for varying coefficients

  o  minor improvements in documentation


                CHANGES in `mboost' VERSION 2.0-2 (2010-03-04)

  o  fixed bug in helper function get_index, which caused (in some circumstances)
     wrong handling of factors in gamboost() (spotted by
     Juliane Schaefer <JSchaefer _at_ uhbs.ch>)

  o  reduce memory footprint in blackboost (requires party 0.9-9993)


                CHANGES in `mboost' VERSION 2.0-1 (2010-03-01)

  o  fixed bug in coef( , aggregate = "cumsum"): fraction "nu" was missing


                CHANGES in `mboost' VERSION 2.0-0 (2010-02-01)

  o  generic implementation of component-wise functional gradient
     boosting in `mboost_fit', specialized code for linear,
     additive and interaction models removed
