@@ -1,7 +1,7 @@
 Package: mboost
 Title: Model-Based Boosting
-Date: 2010-04-15
-Version: 2.0-4
+Date: 2010-05-21
+Version: 2.0-5
 Author: Torsten Hothorn, Peter Buehlmann, Thomas Kneib, Matthias Schmid and
   Benjamin Hofner
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
