@@ -1,4 +1,9 @@
 
+                CHANGES in `mboost' VERSION 2.0-5 (2010-05-21, rXXX)
+
+  o  no not use multicore functionality in R CMD check
+
+
                 CHANGES in `mboost' VERSION 2.0-4 (2010-04-15, r490)
 
   o  new vignette "mboost" describing 2.0-x series features
